--- a/history.html
+++ b/history.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="container">
-     <nav>
-        <a class="nav" href="home.html">Home</a>
-        <a class="nav" href="history.html">History</a>
-        <a class="nav" href="food.html">Entertainment</a>
-        <img class="img" class="nav" src="Majorville Summer Solstice Logo.png" alt="Majorville Summer Solstice Logo">
-     </nav>
+      <nav class="nav">
+         <a class="nav1" href="home.html">Home</a>
+         <a class="nav2" href="history.html">History</a>
+         <a class="nav3" href="food.html">Entertainment</a>
+         
+      </nav>
+     <img class="logo" src="Majorville Summer Solstice Logo.png" alt="Majorville Summer Solstice Logo">
      <header class="header">
         <h2>The History of Majorville</h2>
      </header>
@@ -21,5 +22,6 @@
         <p>Majorville is located on Lake Michigan where Pine Creek empties into Lake Michigan just south of Esky Road.  Today this is one of the most popular swimming beaches in the Lakeshore, but in the 1870s and 1880s, Majorville was a booming lumber town!</p>
         <p>John Major settled with his wife Julia and daughter Anna in Northern Michigan. Lumber speculators soon arrived looking for stands of white pine. Most of the forest in this area was hardwood, but there were some stands of white pine inland from Pine Lake. By the late 1850s Major&apos;s lumber speculators were on their way north as the forests near Grand Haven and Muskegon were harvested.</p>
      </main>
-     <img class="1mg2" src="lakesidetown.jpg" alt="lake side town">
+     <img class="img1" src="lakesidetown.jpg" alt="lake side town">
+     <footer>-&copy; 2024 Career Tech</footer>
     </div>
