--- a/history.html
+++ b/history.html
@@ -7,21 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-      <nav class="nav">
-         <a class="nav1" href="home.html">Home</a>
-         <a class="nav2" href="history.html">History</a>
-         <a class="nav3" href="food.html">Entertainment</a>
-         
+   <div class="container">
+      <nav class="main-nav">
+         <ul>
+             <li><a href="index.html">Home</a></li>
+             <li><a href="history.html">History</a></li>
+             <li><a href="food.html">Entertainment</a></li>
+         </ul>
       </nav>
-     <img class="logo" src="Majorville Summer Solstice Logo.png" alt="Majorville Summer Solstice Logo">
+      <div class="logo">
+         <img  src="festival-logo-100.png" alt="Majorville Summer Solstice Logo">
+     </div>
      <header class="header">
         <h2>The History of Majorville</h2>
      </header>
      <main class="main">
         <p>Majorville is located on Lake Michigan where Pine Creek empties into Lake Michigan just south of Esky Road.  Today this is one of the most popular swimming beaches in the Lakeshore, but in the 1870s and 1880s, Majorville was a booming lumber town!</p>
-        <p>John Major settled with his wife Julia and daughter Anna in Northern Michigan. Lumber speculators soon arrived looking for stands of white pine. Most of the forest in this area was hardwood, but there were some stands of white pine inland from Pine Lake. By the late 1850s Major&apos;s lumber speculators were on their way north as the forests near Grand Haven and Muskegon were harvested.</p>
+        <p>John Major settled with his wife Julia and daughter Anna in Northern Michigan. Lumber speculators soon arrived looking for stands of white pine. <br> Most of the forest in this area was hardwood, but there were some stands of white pine inland from Pine Lake. By the late 1850s Major&apos;s lumber speculators were on their way north as the forests near Grand Haven and Muskegon were harvested.
+        </p>
+        <p> <br> Dr. Arthur O&apos;Leary, recognized the financial potential of the timber stands around Pine Creek. He began buying up large tracts of forest and made plans to build a sawmill. 
+
+         The sawmill was built on the south side of Pine Creek not far from Lake Michigan. <br> A bridge was built upstream of the pond to carry traffic to the mill. A boarding house was built south of the mill, and horse barns were built north of the creek. Mill operation began in 1869 for the purpose of producing white pine lumber, and the town of Majorville was established.
+         </p>
+        <img class="img1" src="lakesidetown.jpg" alt="lake side town">
+        <img class="img1" src="mill.jpg" alt="lumber mill">
      </main>
-     <img class="img1" src="lakesidetown.jpg" alt="lake side town">
-     <footer>-&copy; 2024 Career Tech</footer>
+     
+     <footer class="footer">-&copy; 2024 Career Tech</footer>
     </div>
+</body>
