--- a/food.html
+++ b/food.html
@@ -43,7 +43,7 @@
             <li>Good on Wheels: <a href="https://mynorth.com/at_biz_dir/good-on-wheels/">https://mynorth.com/at_biz_dir/good-on-wheels/</a></li>
             <li>TC Pizza Company: <a href="https://traversecitypizzaco.com/">https://traversecitypizzaco.com/</a></li>
         </ol>
-       
+       <img class="img1" src="foodtruck.png" alt="food-truck">
      </main>
      <footer class="footer">-&copy; 2024 Career Tech</footer>
    </div>
