--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
             
      </header>
      <div>
-     <img class="img1" src="lumber.jpg" alt="Lumber Mill">
-      <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/42986213@N02/8273995918">Cass Lumber Mill</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/42986213@N02">dbnunley</a> is licensed under <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/licenses/by/2.0/?ref=openverse">CC BY 2.0 <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>. </p>
+     
      </div>
      <main class="main">
-        <p>We are celebrating 150th anniversary of our logging town <br> <br> 
+        <p>We are celebrating 150th anniversary <br> of our logging town <br> <br> 
 
              The event will take place on June 20, 2024.
             </p> <br>
@@ -42,6 +41,8 @@
             <li>When: Thursday, June 20, 2024 from 11am-10pm</li>
             <li>Who: All family and friends and kids can come. <br> All this is hosted by The Majorville Chamber of Commerce</li>
         </ul>
+        <img class="img1" src="lumber.jpg" alt="Lumber Mill">
+      <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/42986213@N02/8273995918">Cass Lumber Mill</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/42986213@N02">dbnunley</a> is licensed under <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/licenses/by/2.0/?ref=openverse">CC BY 2.0 <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>. </p>
      </main>
      <footer class="footer">- &copy; 2024 Career Tech</footer>
     </div>
